--- a/calc/llparser_ex/unit_test/Makefile
+++ b/calc/llparser_ex/unit_test/Makefile
@@ -9,7 +9,7 @@ CC = clang
 #HEADER_PATH = -I ~/Desktop/github/compiler/greatest
 HEADER_PATH = -I ../../../compiler/greatest
 
-LINKED_OBJECTS = test_cases.o fileToTest.o
+LINKED_OBJECTS = test_cases_token.o fileToTest.o parser.o
 
 all: clean test.run
 
@@ -22,8 +22,11 @@ test.run: test_main.c ${LINKED_OBJECTS}
 clean:
 		rm -f *.o *.core *.out *.run
 
-test_cases.o:
-		${CC} ${HEADER_PATH} ${CFLAGS} ${LDFLAGS} -g -o $@ -c test_cases.c
+test_cases_token.o:
+		${CC} ${HEADER_PATH} ${CFLAGS} ${LDFLAGS} -g -o $@ -c test_cases_token.c
 
 fileToTest.o:
 		${CC} ${HEADER_PATH} ${CFLAGS} ${LDFLAGS} -pthread -g -o $@ -c ../lexicalanalyzer.c
+
+parser.o:
+		${CC} ${HEADER_PATH} ${CFLAGS} ${LDFLAGS} -pthread -g -o $@ -c ../parser.c
