--- a/crowbar_v1/debug/Makefile
+++ b/crowbar_v1/debug/Makefile
@@ -1,11 +1,13 @@
 TARGET = dbg.o
 CC=gcc
 CFLAGS = -c -g -Wall -DDBG_NO_DEBUG -ansi -pedantic
-OBJS = debug.o
+_OBJS = debug.o
+OBJS = $(patsubst %, $(BUILD_DIR)/%, $(_OBJS))
 INCLUDES = -I..
+BUILD_DIR=../build
 
-$(TARGET):$(OBJS)
-	ld -r -o $@ $(OBJS)
-.c.o:
-	$(CC) $(CFLAGS) $(INCLUDES) $*.c
+$(BUILD_DIR)/$(TARGET):$(OBJS)
+	ld -r -o $@ $^
+$(BUILD_DIR)/%.o: %.c
+	$(CC) $(CFLAGS) $(INCLUDES) -o $@ $<
 debug.o: debug.c ../MEM.h debug.h ../DBG.h
