--- a/crowbar_v1/memory/Makefile
+++ b/crowbar_v1/memory/Makefile
@@ -1,14 +1,20 @@
 TARGET = mem.o
 CC=gcc
 CFLAGS = -c -g -DDEBUG -Wall -ansi -pedantic
-OBJS = memory.o storage.o
+_OBJS = memory.o storage.o
+OBJS = $(patsubst %, $(BUILD_DIR)/%, $(_OBJS))
+INCLUDES = -I..
+BUILD_DIR=../build
 
-$(TARGET):$(OBJS)
-	ld -r -o $@ $(OBJS)
-testp : $(OBJS) main.o
-	$(CC) -o $@ $(OBJS) main.o
-.c.o:
-	$(CC) $(CFLAGS) -I.. $*.c
+$(BUILD_DIR)/$(TARGET):$(OBJS)
+	#ld -r -o $@ $(OBJS)
+	ld -r -o $@ $^
+testp : $(OBJS) $(BUILD_DIR)/main.o
+	$(CC) -o $@ $^
+$(BUILD_DIR)/%.o: %.c
+	$(CC) $(CFLAGS) $(INCLUDES) -o $@ $<
+#.c.o:
+#	$(CC) $(CFLAGS) -I.. $*.c
 main.o: main.c ../MEM.h
 memory.o: memory.c memory.h ../MEM.h
 storage.o: storage.c memory.h ../MEM.h
