--- a/.gitignore
+++ b/.gitignore
@@ -21,24 +21,23 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
+bench/.idea/**/workspace.xml
+bench/.idea/**/tasks.xml
+bench/.idea/**/usage.statistics.xml
+bench/.idea/**/dictionaries
+bench/.idea/**/shelf
 
 # Sensitive or high-churn files
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
-.idea/**/dbnavigator.xml
-
+bench/.idea/**/dataSources/
+bench/.idea/**/dataSources.ids
+bench/.idea/**/dataSources.local.xml
+bench/.idea/**/sqlDataSources.xml
+bench/.idea/**/dynamic.xml
+bench/.idea/**/uiDesigner.xml
+bench/.idea/**/dbnavigator.xml
 # Gradle
-.idea/**/gradle.xml
-.idea/**/libraries
+bench/.idea/**/gradle.xml
+bench.idea/**/libraries
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
@@ -61,7 +60,7 @@ cmake-build-*/
 out/
 
 # mpeltonen/sbt-idea plugin
-.idea_modules/
+bench/.idea_modules/
 
 # JIRA plugin
 atlassian-ide-plugin.xml
