--- a/antlr-ex/pom.xml
+++ b/antlr-ex/pom.xml
@@ -8,11 +8,13 @@
   <name>antlr-ex</name>
   <url>http://maven.apache.org</url>
   <dependencies>
+    <!-- https://mvnrepository.com/artifact/org.antlr/antlr4 -->
     <dependency>
       <groupId>org.antlr</groupId>
-      <artifactId>antlr4-runtime</artifactId>
+      <artifactId>antlr4</artifactId>
       <version>4.8-1</version>
     </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
