--- a/antlr-ex/pom.xml
+++ b/antlr-ex/pom.xml
@@ -27,12 +27,12 @@
       <version>4.8-1</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/org.antlr/stringtemplate -->
     <dependency>
       <groupId>org.antlr</groupId>
-      <artifactId>stringtemplate</artifactId>
-      <version>4.0</version>
+      <artifactId>ST4</artifactId>
+      <version>4.3</version>
     </dependency>
+
 
     <dependency>
       <groupId>junit</groupId>
