--- a/.gitignore
+++ b/.gitignore
@@ -1,79 +1,57 @@
-# object file
-*.o
-*.obj
-*.elf
+# Java related, 
+*.jar
+*.war
+*.ear
+*.class
 
-# shared objects
-*.so
-*.dylib
-
-# debug file
-*.dSYM/
-#
-# execute file
-*.run
-
-# vim temp file
-*~
-*.swp
 
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
+# Reference: https://github.com/github/gitignore/blob/master/Global/JetBrains.gitignore
 
 # User-specific stuff
-bench/.idea/**/workspace.xml
-bench/.idea/**/tasks.xml
-bench/.idea/**/usage.statistics.xml
-bench/.idea/**/dictionaries
-bench/.idea/**/shelf
+.idea/
+.idea/**/workspace.xml
+.idea/**/tasks.xml
+.idea/**/usage.statistics.xml
+.idea/**/dictionaries
+.idea/**/shelf
+
+# Generated files
+.idea/**/contentModel.xml
 
 # Sensitive or high-churn files
-bench/.idea/**/dataSources/
-bench/.idea/**/dataSources.ids
-bench/.idea/**/dataSources.local.xml
-bench/.idea/**/sqlDataSources.xml
-bench/.idea/**/dynamic.xml
-bench/.idea/**/uiDesigner.xml
-bench/.idea/**/dbnavigator.xml
+.idea/**/dataSources/
+.idea/**/dataSources.ids
+.idea/**/dataSources.local.xml
+.idea/**/sqlDataSources.xml
+.idea/**/dynamic.xml
+.idea/**/uiDesigner.xml
+.idea/**/dbnavigator.xml
+
 # Gradle
-bench/.idea/**/gradle.xml
-bench.idea/**/libraries
-
-# Gradle and Maven with auto-import
-# When using Gradle or Maven with auto-import, you should exclude module files,
-# since they will be recreated, and may cause churn.  Uncomment if using
-# auto-import.
-# .idea/modules.xml
-# .idea/*.iml
-# .idea/modules
-
-# CMake
-cmake-build-*/
-
-# Mongo Explorer plugin
-.idea/**/mongoSettings.xml
+.idea/**/gradle.xml
+.idea/**/libraries
 
 # File-based project format
 *.iws
+*.iml
 
 # IntelliJ
 out/
 
 # mpeltonen/sbt-idea plugin
-bench/.idea_modules/
+.idea_modules/
 
-# JIRA plugin
-atlassian-ide-plugin.xml
-
-# Cursive Clojure plugin
-.idea/replstate.xml
-
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
-
-# Editor-based Rest Client
-.idea/httpRequests.swo
-
+#maven
+# Reference : https://github.com/github/gitignore/blob/master/Maven.gitignore
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+# https://github.com/takari/maven-wrapper#usage-without-binary-jar
+.mvn/wrapper/maven-wrapper.jar
