--- a/antlr-ex/pom.xml
+++ b/antlr-ex/pom.xml
@@ -33,6 +33,12 @@
       <version>4.3</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.ow2.asm/asm -->
+    <dependency>
+      <groupId>org.ow2.asm</groupId>
+      <artifactId>asm</artifactId>
+      <version>8.0</version>
+    </dependency>
 
     <dependency>
       <groupId>org.junit.jupiter</groupId>
