--- a/antlr-ex/pom.xml
+++ b/antlr-ex/pom.xml
@@ -46,6 +46,13 @@
       <version>8.0</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.ow2.asm/asm-commons -->
+    <dependency>
+      <groupId>org.ow2.asm</groupId>
+      <artifactId>asm-commons</artifactId>
+      <version>8.0</version>
+    </dependency>
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
