--- a/antlr-ex/pom.xml
+++ b/antlr-ex/pom.xml
@@ -33,6 +33,12 @@
       <version>4.3</version>
     </dependency>
 
+    <dependency>
+      <groupId>antlr</groupId>
+      <artifactId>stringtemplate</artifactId>
+      <version>2.3b6</version>
+    </dependency>
+
     <!-- https://mvnrepository.com/artifact/org.ow2.asm/asm -->
     <dependency>
       <groupId>org.ow2.asm</groupId>
